<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toTopOf="@+id/hint"
        app:layout_constraintStart_toEndOf="@id/textEdit"
        app:layout_constraintTop_toTopOf="@+id/textEdit" />


    <AutoCompleteTextView
        android:id="@+id/textEdit"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

    />
    <TextView
        android:id="@+id/hint"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/bin_hint"
        android:textAlignment="center"></TextView>
    <TextView
        android:id="@+id/network"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/hint"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/network"
        android:textAlignment="center"></TextView>
    <TextView
        android:id="@+id/networkData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/network"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/NULL"
        android:textColor="@color/black"
        android:textAlignment="center"
        ></TextView>

    <TextView
        android:id="@+id/brand"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/networkData"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/BRAND"
        android:textAlignment="center"></TextView>
    <TextView
        android:id="@+id/brandData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/brand"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/NULL"
        android:textColor="@color/black"
        android:textAlignment="center"
        ></TextView>
    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/brandData"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/CARD_NUMBER"
        android:textAlignment="center"></TextView>
    <TextView
        android:id="@+id/cardLength"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/cardNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/LENGTH"
        android:textAlignment="textStart"
        android:layout_marginStart="5dp"
        ></TextView>
    <TextView
        android:id="@+id/cardLengthData"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/NULL"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/cardNumber"
        app:layout_constraintStart_toEndOf="@+id/cardLength"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber"></TextView>
    <TextView
        android:id="@+id/cardLuhn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/cardLength"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/LUHN"
        android:textAlignment="textStart"
        android:layout_marginStart="5dp"
        ></TextView>

    <TextView
        android:id="@+id/cardLuhnData"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/cardLengthData"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardLuhn"
        app:layout_constraintTop_toBottomOf="@+id/cardLengthData"></TextView>

    <TextView
        android:id="@+id/type"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/TYPE"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint"></TextView>

    <TextView
        android:id="@+id/typeData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"></TextView>

    <TextView
        android:id="@+id/prepaid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/PREPAID"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeData"></TextView>

    <TextView
        android:id="@+id/prepaidData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prepaid"></TextView>

    <TextView
        android:id="@+id/country"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/COUNTRY"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prepaidData"></TextView>

    <TextView
        android:id="@+id/countryData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"></TextView>
    <TextView
        android:autoLink="map"
        android:id="@+id/countryData2"
        android:layout_width="150dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryData"></TextView>

    <TextView
        android:id="@+id/bank"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/BANK"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autoLink="map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint"></TextView>
    <TextView
        android:autoLink="map"
        android:id="@+id/bankName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank"></TextView>
    <TextView
        android:autoLink="web"
        android:id="@+id/bankUrl"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankName"></TextView>
    <TextView
        android:autoLink="phone"
        android:id="@+id/bankNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankUrl"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>